name:                freq
version:             0.1.1

synopsis:            Frequencies of integers, and distributions of
		     combinatorial statistics

description:         A trivial library for computing frequencies of
		     integers and the distribution of combinatorial
		     statistics E.g., you can easliy compute the 
		     distribution of descents over all permutations
		     of a given (small) length.

Homepage:            http://github.com/akc/freq

license:             BSD3
license-file:        LICENSE
author:              Anders Claesson
maintainer:          anders.claesson@gmail.com
category:            Math
build-type:          Simple
Extra-Source-Files:  README.md
cabal-version:       >=1.8

source-repository head
  type:                git
  location:            git://github.com/akc/freq.git

library
  exposed-modules:     Freq
  build-depends:       base >=4.5 && <5, containers >=0.4 && <0.6
